# specsZolware

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.rst  about.html  genindex.html  index.html  objects.inv  publish-key.enc  py-modindex.html  requirements.txt  samples.html  search.html  searchindex.js  template.html  tests.html
.doctrees/: about.doctree  environment.pickle  index.doctree  samples.doctree  template.doctree  tests.doctree
_modules/: index.html
_sources/: about.rst.txt  index.rst.txt  samples.rst.txt
_static/: alabaster.css
api/: architecture.html  debuger.html  deployment.html  extensions.html  index.html  linearKalmanFilter.html  profiler.html  signal.html  wrapper.html
cmake/: ReplicateSourceTree.cmake
custom/: index.html
data/: architecture.html  dataApp.html  deployment.html  index.html  logging.html  marketApp.html  security.html  server.html  usersApp.html
doc/: CMakeLists.txt  about.rst  conf.py  template.rst  tests.rst
doc/_static/: bokeh-0.12.4.min.css  bokeh-0.12.4.min.js  references.bib  style.css
doc/_templates/: layout.html  link.html  localtoc.html
doc/api/: architecture.rst  debuger.rst  index.rst  profiler.rst  signal.rst
doc/custom/: index.rst
doc/data/: architecture.rst  dataApp.rst  deployment.rst  index.rst  security.rst  server.rst
doc/general/: glossary.rst
doc/support/: index.rst  snippets.rst
doc/zolware/: index.rst
general/: debuger.html  extensions.html  glossary.html  index.html  profiler.html
samples/: plot.py
snippets/: copycss.py  template.py
support/: index.html  snippets.html  tests.html
templates/: template.py  template.rst  testTemplate.py
zolware/: architecture.html  index.html
(+47 files in other folders)
